k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: adnaneelbouhali/exam_k8s:image-backend
          ports:
            - containerPort: 8000
              name: nodejs-port
  selector:
    matchLabels:
      app: backend
