k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: adnaneelbouhali/configmap-test:configmap-test-front
          ports:
            - containerPort: 80
              name: http-port
          volumeMounts:
          - mountPath: /etc/nginx
            name: nginx-configmap
            readOnly: true
      volumes:
      - name: nginx-configmap
        configMap:
          name: nginx-configmap
          items:
            - key: nginx.conf
              path: nginx.conf
  selector:
    matchLabels:
      app: frontend
