k8s/mongodb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-pod
  namespace: exam
  labels:
    app: mongodb
spec:
  containers:
    - name: mongodb-containers
      image: mongo
      ports:
        - containerPort: 27017
          name: mongodb-port
