k8s/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  namespace: exam
spec:
  serviceName: mongodb-service
  selector:
    matchLabels:
      app: mongodb
  replicas: 2
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-container
        image: mongo
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: mongodb-port
          containerPort: 27017
          protocol: TCP
        volumeMounts: 
          - name: mongodb-volume
            mountPath: /var/lib/mongo
      volumes:
      - name: mongodb-volume
        persistentVolumeClaim:
          claimName: mongodb-pvc
