k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: exam
spec:
  ports:
    - port: 8000
      protocol: TCP
  selector:
    app: backend
  type: NodePort
