k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-port
  selector:
    app: frontend
  type: LoadBalancer
