k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: exam
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    app: mongodb
  clusterIP: None
